--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,9 @@ jobs:
         run: npm test
 
       - name: Save Test Result
-        run: echo "RESULT=SUCCESS" >> $GITHUB_ENV
+        run: |
+          echo "RESULT=SUCCESS" >> $GITHUB_ENV
 
       - name: Display Result
         run: |
-          echo "테스트 결과: $RESULT"
+          echo "테스트 결과:$RESULT"
