Add CI test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,5 @@ jobs:
           echo "RESULT=SUCCESS" >> $GITHUB_ENV
 
       - name: Display Result
-        run: echo '테스트 결과: $RESULT'
+        run: |
+          echo "테스트 결과: $RESULT"
